# axum-sqlx-template

./: .env.template  .gitignore  Cargo.toml  bacon.toml
configuration/: base.yaml  local.yaml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/Pages/: Home.tsx  Login.tsx  Register.tsx
frontend/src/components/: login-form.tsx  register-form.tsx
frontend/src/types/: Credentials.ts  User.ts
migrations/: 20230507154934_initial_setup.down.sql  20230507154934_initial_setup.up.sql  20250328091229_add_user_table.up.sql
src/: lib.rs  main.rs  startup.rs
src/api/: mod.rs
src/auth/: claims.rs  mod.rs  token.rs
src/config/: auth.rs  database.rs  inertia.rs  jwks.rs  mod.rs
src/models/: mod.rs  user.rs
src/pages/: auth.rs  mod.rs
src/routes/: mod.rs
