[package]
name = "axum-sqlx-template"
version = "0.1.0"
edition = "2021"
authors = ["LeNei <leonmarc.neisskenwirth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4.22", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4.1.2"
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
axum = { version = "0.6.14", features = ["tracing"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0"
