[package]
name = "axum-sqlx-template"
version = "0.3.0"
edition = "2024"
authors = ["LeNei <leonmarc.neisskenwirth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
serde-aux = "4.1.2"
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
axum-inertia = { git = "https://github.com/LeNei/axum-inertia" }
axum = { version = "0.8.1", features = ["tracing"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
http = "1.3.1"
anyhow = "1.0"
axum-login = "0.17.0"
tower-sessions = "0.14.0"
ts-rs = { version = "10.1.0", features = [
    "uuid-impl",
    "chrono-impl",
    "serde-json-impl",
] }
password-auth = "1.0.0"
thiserror = "2.0.12"
async-trait = "0.1.88"

